# Summer_Course_in_C

./: CMakeLists.txt  CodingStyleExample.c  README.md  ex2.tar  ex3.tar
Summer Course C/ex1/: CMakeLists.txt
Summer Course C/ex1/ex1/: ex1.c  print.py
Summer Course C/ex2/: CMakeLists.txt  LineSeparator.c  LineSeparator.h  LineSeparator.in1  MyString.c  MyString.h  ex2.tar
Summer Course C/ex3/: CMakeLists.txt  GenericDFS.c  SudokuTree.h
ex1/: ex1.c
ex1/ex1/: ex1.c
ex2/: Makefile  MyString.c  valdbg_LineSeparator  valdbg_MyString
ex3/: Makefile  SudokuSolver.c  SudokuTree.c
